# explore-mcp

./: .gitignore  .isort.cfg  BACKEND_IMPROVEMENTS.md  CLAUDE.md  COMPARISON.md  ENV_TEMPLATE  GIT_MCP_FUTURE_ENHANCEMENTS.md  GMAIL_SETUP.md  GOOGLE_DRIVE_SETUP.md  IMPLEMENTATION_SUMMARY.md  NEXT_STEPS.md  NPM_PACKAGE_INTEGRATION_PLAN.md  QUICKSTART.md  QUICKSTART_GOOGLE_DRIVE.md  README.md  TESTING.md  TEST_GUIDE.md  ai_generator.py  auth_discovery_findings.md  chat_backend.py  client.py  gmail_mcp_server.py  google_drive_mcp_server.py  http_server.py  intercept_filesystem_server.py  main.py  mcp  mcp-eval-agent.md  mcp_cli.py  mcp_eval_generator.py  mcp_evals_generator.py  mcp_generator.py  mcp_mock_generator.py  mcp_server_generator.py  mcp_tools.py  mvp_next_steps.md  oauth_handler.py  oct_21_changes_summary.md  public_remote_mcp.json  pyproject.toml  (+13 more)
ai_generation/: README.md  __init__.py  ai_service.py  cli.py  discovery.py  discovery_models.py  evals_generator.py  evaluation_runner.py  server_generator.py
backend/: README.md  __init__.py  app.py
chat-frontend/: package.json
demos/: protocol_demo.py
development_notes/: AUTO_DISCOVERY_IMPLEMENTATION.md  CHAT_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  NEXT_PHASE_LOCAL_SERVERS.md  README.md
examples/: README.md  npm_mcp_workflow.md  npm_mcp_workflow_with_mitm.md  remote_http_mcp.md
mcp_interceptor/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.txt  CHANGES.md  E2E_TEST_README.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_MATRIX.txt  IMPORT_VERIFICATION.md  INTERCEPTOR_README.md  QUICK_REFERENCE.md  (+16 more)
(+112 files in other folders)
